<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorAccent"
                android:text="@string/widget_nosymbol"/>

        </LinearLayout>

        <TextView
            android:id="@+id/widget_price"
            android:layout_width="@dimen/detail_widget_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_marginEnd="@dimen/stock_text_space"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorDetail1"
            android:textSize="@dimen/stock_widget_text_size"
            tools:text="@string/widget_noprice"/>

        <TextView
            android:id="@+id/widget_change"
            android:layout_width="@dimen/detail_widget_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorDetail2"
            android:textSize="@dimen/stock_widget_text_size"
            tools:text="@string/widget_nochangedata"/>

    </LinearLayout>
</FrameLayout>